	PR c++/13070 	* decl.c (duplicate_decls): When setting the type of an anticipated 	declaration, merge the existing type attributes.

* g++.dg/warn/format3.C: New test case.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@75185 138bc75d-0d04-0410-961f-82ee72b054a4