gcc/cp/decl.c
@@ -1261,7 +1261,12 @@ duplicate_decls (tree newdecl, tree olddecl)
       /* Even if the types match, prefer the new declarations type
 	 for anticipated built-ins, for exception lists, etc...  */
       else if (DECL_ANTICIPATED (olddecl))
-	TREE_TYPE (olddecl) = TREE_TYPE (newdecl);
+	{
+	  TYPE_ATTRIBUTES (TREE_TYPE (newdecl))
+	    = (*targetm.merge_type_attributes) (TREE_TYPE (olddecl),
+						TREE_TYPE (newdecl));
+	  TREE_TYPE (olddecl) = TREE_TYPE (newdecl);
+	}
 
       /* Whether or not the builtin can throw exceptions has no
 	 bearing on this declarator.  */
